docs: jwt settings

--- a/Goals.API/appsettings.json
+++ b/Goals.API/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "MsSql": "sql-server-connection-string"
+    },
+    "Jwt": {
+        "Issuer": "Goals.API",
+        "Audience": "Goals.WebUI",
+        "SecretKey": "secret-key"
     }
 }
